--- a/tests/test_baseline.ipynb
+++ b/tests/test_baseline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +33,14 @@
        "      <th>overlap_title</th>\n",
        "      <th>date_diff</th>\n",
        "      <th>common_author</th>\n",
+       "      <th>score_1_2</th>\n",
+       "      <th>score_2_1</th>\n",
+       "      <th>cosine_distance</th>\n",
+       "      <th>jaccard</th>\n",
+       "      <th>adar</th>\n",
+       "      <th>preferential_attachment</th>\n",
+       "      <th>resource_allocation_index</th>\n",
+       "      <th>common_neighbors</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -45,6 +53,14 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>17.844392</td>\n",
+       "      <td>14.535935</td>\n",
+       "      <td>0.075791</td>\n",
+       "      <td>0.066667</td>\n",
+       "      <td>0.513898</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>0.142857</td>\n",
+       "      <td>0.142857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -55,6 +71,14 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>19.415184</td>\n",
+       "      <td>24.296850</td>\n",
+       "      <td>0.082450</td>\n",
+       "      <td>0.098039</td>\n",
+       "      <td>4.320366</td>\n",
+       "      <td>11388.0</td>\n",
+       "      <td>0.226401</td>\n",
+       "      <td>0.226401</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -65,6 +89,14 @@
        "      <td>0</td>\n",
        "      <td>-2</td>\n",
        "      <td>0</td>\n",
+       "      <td>15.116037</td>\n",
+       "      <td>10.080194</td>\n",
+       "      <td>0.018402</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -75,6 +107,14 @@
        "      <td>0</td>\n",
        "      <td>-4</td>\n",
        "      <td>0</td>\n",
+       "      <td>16.765770</td>\n",
+       "      <td>20.295904</td>\n",
+       "      <td>0.058245</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -85,6 +125,14 @@
        "      <td>0</td>\n",
        "      <td>-5</td>\n",
        "      <td>0</td>\n",
+       "      <td>21.457809</td>\n",
+       "      <td>25.240819</td>\n",
+       "      <td>0.069025</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>168.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -98,15 +146,22 @@
        "3   9911255|302165  9911255   302165       0              0         -4   \n",
        "4   9701033|209076  9701033   209076       0              0         -5   \n",
        "\n",
-       "   common_author  \n",
-       "0              0  \n",
-       "1              0  \n",
-       "2              0  \n",
-       "3              0  \n",
-       "4              0  "
+       "   common_author  score_1_2  score_2_1  cosine_distance   jaccard      adar  \\\n",
+       "0              0  17.844392  14.535935         0.075791  0.066667  0.513898   \n",
+       "1              0  19.415184  24.296850         0.082450  0.098039  4.320366   \n",
+       "2              0  15.116037  10.080194         0.018402  0.000000  0.000000   \n",
+       "3              0  16.765770  20.295904         0.058245  0.000000  0.000000   \n",
+       "4              0  21.457809  25.240819         0.069025  0.000000  0.000000   \n",
+       "\n",
+       "   preferential_attachment  resource_allocation_index  common_neighbors  \n",
+       "0                     55.0                   0.142857          0.142857  \n",
+       "1                  11388.0                   0.226401          0.226401  \n",
+       "2                      5.0                   0.000000          0.000000  \n",
+       "3                    280.0                   0.000000          0.000000  \n",
+       "4                    168.0                   0.000000          0.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
